--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@heroicons/react": "^2.1.4",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/themes": "^3.0.5",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"express": "^4.19.2",
+		"jquery": "^3.7.1",
+		"moment": "^2.30.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-scripts": "5.0.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"startB": "nodemon backend/server.js",
+		"startB": "nodemon src/backend/server.js",
 		"startF": "react-scripts start",
 		"start": "concurrently \"npm run startB\" \"npm run startF\"",
 		"build": "react-scripts build",
